solve tasks